fix build issue [mvn -e clean compile  -DskipTests  -Dmaven.javadoc.skip=true]

--- a/zookeeper-metrics-providers/zookeeper-prometheus-metrics/pom.xml
+++ b/zookeeper-metrics-providers/zookeeper-prometheus-metrics/pom.xml
@@ -62,12 +62,12 @@
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
-      <scope>provided</scope>
+      <!--      <scope>provided</scope>-->
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-servlet</artifactId>
-      <scope>provided</scope>
+      <!--      <scope>provided</scope>-->
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
