--- a/pom.xml
+++ b/pom.xml
@@ -663,7 +663,7 @@
         <groupId>com.github.spotbugs</groupId>
         <artifactId>spotbugs-annotations</artifactId>
         <version>${spotbugsannotations.version}</version>
-        <scope>provided</scope>
+        <!--      <scope>provided</scope>-->
         <optional>true</optional>
       </dependency>
       <dependency>
